input views